Correction contraste citation

--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ button {
     outline: none!important;
 }
 
+q {
+    color: black;
+    font-size: 1.1em;
+    font-style: italic;
+}
+
 a:hover {
     text-decoration: none;
     cursor: pointer;
